--- a/cadastro/cadastro1.html
+++ b/cadastro/cadastro1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cadastro.css">
     
 </head>
 <body>
@@ -64,7 +64,7 @@
         </form>
     </div>
 
-    <script src="index.js"></script>
+    <script src="cadastro.js"></script>
     
 </body>
 </html>
